2003-09-09  Bruno Haible  <bruno@clisp.org>

	* read-properties.c (phase4_getuc): Cast line_number to 'unsigned long'
	before outputting it.

2003-09-09  Bruno Haible  <bruno@clisp.org>

	* po-lex.c: Test HAVE_DECL_GETC_UNLOCKED instead of HAVE_GETC_UNLOCKED.
	* write-po.c: Test HAVE_DECL_PUTC_UNLOCKED instead of
	HAVE_PUTC_UNLOCKED.

2003-09-09  Guido Flohr  <guido@imperia.net>

	* x-perl.c (extract_quotelike_pass3): Change \l handling to no longer
	eat up non-uppercase characters; likewise for \u. Also make \l and \u
	work on characters written using hex or octal escape sequence. Fix \Q
	handling. With option --extract-all, avoid "invalid variable
	interpolation" warnings.
	(x_perl_prelex): With option --extract-all, keep variables inside
	double-quoted strings untouched.

2003-09-03  Bruno Haible  <bruno@clisp.org>

	* x-sh.h: New file.
	* x-sh.c: New file.
	* xgettext.c: Include x-sh.h.
	(main): Call x_sh_extract_all, x_sh_keyword.
	(usage): Mention Shell language.
	(language_to_extractor): Add Shell rule.
	(extension_to_language): Add Shell rule.
	* Makefile.am (noinst_HEADERS): Add x-sh.h.
	(xgettext_SOURCES): Add x-sh.c.
	* Makefile.msvc (xgettext_OBJECTS): Add x-sh.obj.
	(x-sh.obj): New rule.
	* Makefile.vms (xgettext_OBJECTS): Add x-sh.obj.
	(x-sh.obj): New rule.

2003-08-31  Bruno Haible  <bruno@clisp.org>

	* format-sh.c: New file.
	* message.h (format_sh): New enum value.
	(NFORMATS): Increment.
	* format.h (formatstring_sh): New declaration.
	* format.c (formatstring_parsers): Add entry for sh.
	* message.c (format_language, format_language_pretty): Likewise.
	* Makefile.am (FORMAT_SOURCE): Add format-sh.c.
	* Makefile.msvc (OBJECTS): Add format-sh.obj.
	(format-sh.obj): New rule.
	* Makefile.vms (OBJECTS): Add format-sh.obj.
	(format-sh.obj): New rule.

2003-08-31  Bruno Haible  <bruno@clisp.org>

	* format-gcc-internal.c (isdigit): Remove unused macro.
	* format-perl-brace.c (isdigit): Likewise.

2003-09-01  Guido Flohr  <guido@imperia.net>
